# bazel-cpp-toolchain

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  build.sh
main/: BUILD  hello-world.cc
toolchain/: BUILD  cc_toolchain_config.bzl
